Closed Bug 424809 Opened 17 years ago Closed 17 years ago

nsCocoaWindow.mm causes build errors with GCC 4.2 on OS X

Categories

(Core :: Widget: Cocoa, defect, P3)

PowerPC
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta5

People

(Reporter: darkweaver, Assigned: darkweaver)

References

Details

Attachments

(2 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b5pre) Gecko/2008031515 Firefox/3.0b5pre Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b5pre) Gecko/2008031515 Firefox/3.0b5pre A recent checkin to nsCocoaWindow.mm isn't liked by GCC 4.2 (included with the iPhone SDK). See patch for working fix. Reproducible: Always
Attached patch Patch for nsCocoaWindow.mm (obsolete) — Splinter Review
Sean, what's the compiler error?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: wanted1.9.0.x+
Priority: -- → P3
Comment on attachment 311407 [details] Build errors in nsCocoaWindow.mm Sorry, I meant to add the errors to the main bug, but forgot.
Assignee: joshmoz → darkweaver
Comment on attachment 311398 [details] [diff] [review] Patch for nsCocoaWindow.mm Vlad, wanna sr this? It's trivial.
Attachment #311398 - Flags: superreview?(vladimir)
Attachment #311398 - Flags: review+
Attachment #311398 - Flags: review?(hwaara)
Attachment #311398 - Flags: review?(hwaara)
Status: NEW → ASSIGNED
Just for the record, at least one other fix (for example bug 421689) would need to land on the branch in order for it to be compilable under iPhone SDK. There might potentially be other similar patches to this one that'd need to be coordinated...
Yep, https://bugzilla.mozilla.org/show_bug.cgi?id=423405 would be needed too. Just for future reference, how do you create the nicer bug links?
(In reply to comment #7) > Yep, https://bugzilla.mozilla.org/show_bug.cgi?id=423405 would be needed too. > > Just for future reference, how do you create the nicer bug links? If you write "bug X" (without the quotes), it is automatically converted to a link. Same with "attachment Y" for referring to attachments of a bug.
Comment on attachment 311398 [details] [diff] [review] Patch for nsCocoaWindow.mm indent the 'break;'s correctly after the default: ?
Attachment #311398 - Flags: superreview?(vladimir) → superreview+
Attachment #311398 - Attachment is obsolete: true
Given that this is my first patch, I'm not sure of what to do now. The new patch has been uploaded, and I have + on r and sr, is there something else I need to do?
Comment on attachment 311422 [details] [diff] [review] Patch for nsCocoaWindow.mm - rev 1 Next step is to ask for approval, since the tree is semi-closed down. Drivers: Trivial patch to make trunk compilable with latest GCC and iPhone SDK.
Attachment #311422 - Flags: approval1.9b5?
(In reply to comment #6) > Just for the record, at least one other fix (for example bug 421689) would need > to land on the branch in order for it to be compilable under iPhone SDK. > > There might potentially be other similar patches to this one that'd need to be > coordinated... Håkan, if you're tracking these for a possible branch landings, bug 423405 and bug 407535 (at the very least, the Camino hunk will still be relevant, too). Luckily this version of Xcode doesn't seem to have been released yet outside of the beta iPhone SDK.
Comment on attachment 311422 [details] [diff] [review] Patch for nsCocoaWindow.mm - rev 1 a1.9b5=beltzner; would that it were this easy to patch the iPhone SDK terms of use!
Attachment #311422 - Flags: approval1.9b5? → approval1.9b5+
Checking in widget/src/cocoa/nsCocoaWindow.mm; /cvsroot/mozilla/widget/src/cocoa/nsCocoaWindow.mm,v <-- nsCocoaWindow.mm new revision: 1.140; previous revision: 1.139 done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta5
Version: unspecified → Trunk
Thanks for the patch, Sean! [I'm wondering if we should set up a meta-bug tracking all of these fixes, until we start landing them on the branch.]
(In reply to comment #16) > [I'm wondering if we should set up a meta-bug tracking all of these fixes, > until we start landing them on the branch.] Håkan had asked me a while ago if I would do that, and I finally worked through my queue, so we now have bug 433203.
Flags: wanted1.9.0.x+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: