Bug 424809 - "nsCocoaWindow.mm causes build errors with GCC 4.2 on OS X" [p=darkweaver@gmail.com (Sean Fleming) r=hwaara sr=vlad a1.9b5=beltzner]